# ClipEdit

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: index.html  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  commands.rs  history.rs  lib.rs  main.rs  sensitive.rs  settings.rs  shortcut.rs  tray.rs  window.rs
tools/: gen_icon.py
